fix blurry icons

--- a/src/global.scss
+++ b/src/global.scss
@@ -52,6 +52,16 @@
   src: url("./assets/fonts/Montserrat-Medium.ttf");
 }
 
+body.dark .opacity-icon {
+  color: #fff;
+  opacity: 0.6;
+}
+
+.opacity-icon {
+  color: #000;
+  opacity: 0.6;
+}
+
 ion-button {
   --box-shadow: none;
 }
